<resources>
    <string name="app_name">ZipKey Dev Tool</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_in">Sign in</string>
    <string name="mail_subject">Create a Cirrent Account</string>
    <string name="mail_body"><![CDATA[Hi, I’d like to set up a Cirrent account.  << INSERT YOUR COMPANY NAME HERE >>]]></string>
    <string name="mail_address">info@cirrent.com</string>
    <string name="walk_me_through_this">Walk me through this</string>
    <string name="check_your_internet_connection">Check your Internet Connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="waiting_for_internet">Waiting for Internet Connection</string>
    <string name="turn_on_wifi">Please, turn on Wi-Fi</string>
    <string name="search_token_expired">Search token expired</string>
    <string name="header_title">ZipKey Walkthru</string>
    <string name="header_body">This shows the user experience for ZipKey product onboarding. The user will have one of these three experiences depending on the Wi-Fi environment. Choose one to walk through:</string>
    <string name="best_title">ZipKey Subscriber</string>
    <string name="best_body">An effortless experience for ZipKey ISP subscribers.</string>
    <string name="better_title">ZipKey Coverage</string>
    <string name="better_body">A simplified experience available in ZipKey coverage – 50%+ of US and Western Europe by the end of 2017.</string>
    <string name="good_title">Soft Access Point</string>
    <string name="good_body">A best-of-breed Soft Access Point experience available out of ZipKey coverage.</string>
    <string name="guide_title">Let\'s Get Started</string>
    <string name="guide_yellow_button">I\'m Ready</string>
    <string name="guide_white_stroke_button">Back</string>
    <string name="guide_first_step">Plug in your product</string>
    <string name="guide_second_step">Power it on</string>
    <string name="guide_third_step">Check for the green light</string>
    <string name="guide_preview">Preview easy set up steps</string>
    <string name="product_selected">Product selected</string>
    <string name="found">Found</string>
    <string name="product_s">Product(s)</string>
    <string name="select_your_product">Select your product</string>
    <string name="my_product_is_not_listed">My product is not listed</string>
    <string name="no_devices_found">No devices found</string>
    <string name="dialog_title">Please enter SoftAP SSID</string>
    <string name="ssid">SSID</string>
    <string name="conf_both_empty">At least one field should be filled in</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bind_token_expired">Bind token expired</string>
    <string name="getting_bind_token">Getting bind token</string>
    <string name="choose_way">Choose the way to connect your product</string>
    <string name="bt_not_supported">Bluetooth (not supported)</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="setup_network_title">Connect to Your Wi-Fi</string>
    <string name="setup_network_body">Choose the network that you want your product to connect to.</string>
    <string name="setup_network_network">Network</string>
    <string name="setup_network_password">Password</string>
    <string name="setup_network_show_password">Show Password</string>
    <string name="setup_network_remember">Remember My Network and Password</string>
    <string name="add_hidden_network">Connect to Hidden Network</string>
    <string name="setup_ssid">SSID</string>
    <string name="security_type">Security Type</string>
    <string name="getting_networks">Getting candidate networks</string>
    <string name="getting_device_info_via_soft_ap">Getting device info via SoftAP</string>
    <string name="interrupted">Interrupted</string>
    <string name="process_interrupted">Onboarding process has been interrupted due to security reasons.</string>
    <string name="load_find_devices">Looking For Products…</string>
    <string name="setup_different_network">Choose a different network</string>
    <string name="success">Success!</string>
    <string name="name_your">Name your</string>
    <string name="name_your_product">Name your Product</string>
    <string name="add_another_acme_product">Add Another Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="is_now_connected_to">is now connected to</string>
    <string name="acme_used_xfinity_with_zipkey_to_simplify_your_setup_learn_more">Product used XFINITY with ZipKey to simplify your setup. Learn more.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_title">My Products</string>
    <string name="no_managed_devices_found">No managed devices found</string>
    <string name="trying_to_rich_cloud">Trying to rich cloud…</string>
    <string name="zipkey">ZipKey</string>
    <string name="developer_tool">Developer Tool</string>
    <string name="replace_with_your_own_action">Replace with your own action</string>
    <string name="getting_managed_devices">Getting managed devices</string>
    <string name="connection_error_occurred">You are not connected to the internet. Please rejoin your home network.</string>
    <string name="retry">OK</string>
    <string name="location_service_is_unavailable">Location Service is unavailable</string>
    <string name="dialog_location_service_body">Location services must be enabled. Please go to your Android Settings and turn on Location Services</string>
    <string name="settings">Settings</string>
    <string name="retrieving_known_networks">Retrieving known networks</string>
    <string name="updating_networks_status">Updating networks status</string>
    <string name="no_known_networks_found">No known networks found</string>
    <string name="connected">Connected</string>
    <string name="known_networks">Known Networks</string>
    <string name="status">Status:</string>
    <string name="security">Security:</string>
    <string name="bssid">BSSID:</string>
    <string name="delete">DELETE</string>
    <string name="deleted_normalcase">Deleted</string>
    <string name="done">DONE</string>
    <string name="removing_network">Removing network</string>
    <string name="title_activity_device_info"> </string>
    <string name="remove_device_dialog_title">Do you want to remove a product?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="resetting_device_product_cloud">Resetting device (product cloud)</string>
    <string name="resetting_device_cirrent_cloud">Resetting device (cirrent cloud)</string>
    <string name="enter_product_action">Enter action to perform</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="such_login_and_password_not_exist">Such login and password combination does not exist</string>
    <string name="logging_in">Logging in</string>
    <string name="press_setup_button_at_the_backside_of_your_device">Press Setup Button at the backside of your device</string>
    <string name="press_setup_button">Press Setup Button</string>
    <string name="no_device_for_poll_">No device for poll for user action</string>
    <string name="action_checking_failed">Action checking failed</string>
    <string name="check_the_light">Check the Light</string>
    <string name="did_you_see_the_light_from_your_device">Did you see the light from your device?</string>
    <string name="light_up_again">Light Up Again</string>
    <string name="walkthru_mode">Walkthru mode</string>
    <string name="got_it">Got It</string>
    <string name="ble_prefix">WCM BLE Service Prefix</string>
    <string name="ble_prefix_hint">Please enter BLE Prefix</string>
    <string name="prefix_empty">BLE prefix can\'t be empty</string>
    <string name="soft_ap_ssid">Soft AP SSID</string>
    <string name="configuration_is_saved">Configuration has been saved</string>
    <string name="wcm_softap">ca-softap</string>
    <string name="sending_via_soft_ap">Sending Credentials via Soft AP…</string>
    <string name="binding_device">Binding Device…</string>
    <string name="getting_manage_token">Getting manage token</string>
    <string name="private_network_succesfully_joined">Private network has been successfully joined</string>
    <string name="connecting_to">Connecting To</string>
    <string name="network_ellipsis">Network…</string>
    <string name="sending_credentials">Sending network credentials…</string>
    <string name="getting_token">Getting manage token…</string>
    <string name="checking_status">Checking network status…</string>
    <string name="resetting_during_onboarding">Resetting device due to error happened during onboarding process…</string>
    <string name="connected_to">Connected to</string>
    <string name="cant_find_soft_ap_network">Can\'t find SoftAP network, please try again in 10 seconds</string>
    <string name="cant_connect_to_device_soft_ap_network">Can\'t connect to device SoftAP network</string>
    <string name="connecting_to_device_via_soft_ap">Connecting to device via Soft AP…</string>
    <string name="disconnect_from_soft_ap">Disconnecting from the Soft Ap network…</string>
    <string name="acme_and_xfinity_use_zipkey">XFINITY Uses ZipKey</string>
    <string name="zipkey_is_available_in_your_neighborhood_through___service">ZipKey is available in your neighborhood through Comcast XFINITY. ZipKey enables your product to automatically discover and safely join your Wi-Fi network. Contact Comcast to learn more about ZipKey-enabled internet service.</string>
    <string name="www_xfinity_com">www.xfinity.com</string>
    <string name="ok_that_s_cool">OK - That\'s Cool</string>
    <string name="that_was_easy">That Was Easy!</string>
    <string name="onboarding_stats">ONBOARDING STATS</string>
    <string name="onboarding_experience">Onboarding Experience</string>
    <string name="avg_taps">Avg Taps</string>
    <string name="success_rate">Success Rate</string>
    <string name="rating">Rating</string>
    <string name="zipkey_subscriber">ZipKey Subscriber</string>
    <string name="avg_taps_subscriber_value">5</string>
    <string name="percents_subscriber_value">100%</string>
    <string name="zipkey_coverage">ZipKey Coverage</string>
    <string name="avg_taps_coverage_value">22</string>
    <string name="percents_coverage_value">95%</string>
    <string name="soft_ap">Soft AP</string>
    <string name="avg_taps_soft_ap_value">25</string>
    <string name="percents_soft_ap_value">80%</string>
    <string name="finish_walkthru">Finish Walkthru</string>
    <string name="learn_more_about_zipkey">Learn More About ZipKey</string>
    <string name="_1_register_an_account">1. Register an Account</string>
    <string name="create_an_acme_account_and_register_your_product">Create an account and register your product</string>
    <string name="show_networks">Show Networks</string>
    <string name="edit_device_name">Edit Device Name</string>
    <string name="reset_device">Reset Device</string>
    <string name="perform_action">Perform an action</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="company_name">Company Name</string>
    <string name="e_mail">E-mail</string>
    <string name="get_started_now">Get Started Now</string>
    <string name="this_will_be_used_as_your_cirrent_account_name">This will be used as your Cirrent account name.</string>
</resources>