<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sampleapp.ui.fragment.demo.DemoGuideFragment"
    tools:ignore="MissingPrefix,ContentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/house" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/text_title"
            fontPath="fonts/montserrat_regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_24_plus" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <include
                android:id="@+id/first_step"
                layout="@layout/guide_first_step" />

            <TextView
                fontPath="fonts/montserrat_regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/first_step"
                android:text="@string/guide_first_step"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14_plus" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/transparent_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <include
                android:id="@+id/second_step"
                layout="@layout/guide_second_step" />

            <TextView
                fontPath="fonts/montserrat_regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/second_step"
                android:text="@string/guide_second_step"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14_plus" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/transparent_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <include
                android:id="@+id/third_step"
                layout="@layout/guide_third_step" />

            <TextView
                fontPath="fonts/montserrat_regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/third_step"
                android:text="@string/guide_third_step"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14_plus" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_preview_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_info_white"
            android:drawablePadding="11dp"
            android:gravity="center_vertical"
            android:text="@string/guide_preview"
            android:textColor="@color/white"
            android:textSize="@dimen/text_13_plus" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_ready"
            style="@style/AppTheme.Button.Yellow"
            android:layout_marginBottom="16dp"
            android:text="@string/guide_yellow_button" />

        <Button
            android:id="@+id/button_back"
            style="@style/AppTheme.Button.WhiteStroke"
            android:layout_marginBottom="24dp"
            android:text="@string/guide_white_stroke_button" />

    </LinearLayout>

</FrameLayout>
