<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:fitsSystemWindows="true"
    tools:context="com.sampleapp.ui.fragment.ConfigurationFragment">

    <TextView
        android:id="@+id/text_hint_soft_ap_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/soft_ap_ssid"
        android:textColor="@color/dark_gray_text"
        android:textSize="@dimen/text_10"
        fontPath="fonts/montserrat_regular.ttf" />

    <EditText
        android:id="@+id/edit_soft_ap_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/text_hint_soft_ap_ssid"
        android:background="@null"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/dialog_title"
        android:text="@string/wcm_softap"
        android:textSize="14dp"
        fontPath="fonts/notosans_regular.ttf" />

    <View
        android:id="@+id/line_edit_soft_ap_ssid"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/edit_soft_ap_ssid"
        android:background="@color/yellow" />

    <TextView
        android:id="@+id/text_hint_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/line_edit_soft_ap_ssid"
        android:text="@string/ble_prefix"
        android:textColor="@color/dark_gray_text"
        android:textSize="@dimen/text_10"
        fontPath="fonts/montserrat_regular.ttf" />

    <EditText
        android:id="@+id/edit_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/text_hint_prefix"
        android:background="@null"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/ble_prefix_hint"
        android:textSize="14dp"
        fontPath="fonts/notosans_regular.ttf" />

    <View
        android:id="@+id/line_prefix"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/edit_prefix"
        android:background="@color/yellow" />

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/floating_action_button"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_check_mark_white" />

</RelativeLayout>
