<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sampleapp.ui.fragment.HomeFragment">

    <TextView
        android:id="@+id/text_no_managed_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerInParent="true"
        android:text="@string/no_managed_devices_found"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_unable_to_reach_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerInParent="true"
        android:text="@string/connection_error_occurred"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_retry"
        android:layout_below="@+id/text_unable_to_reach_cloud"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/retry"
        style="@style/AppTheme.Button.Yellow"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_managed_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/light_gray"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="true"
        android:footerDividersEnabled="true"
        android:listSelector="@drawable/list_selector"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button"
        style="@style/AppTheme.Fab"
        android:src="@drawable/ic_add" />

</RelativeLayout>
